<resources>
    <string name="app_name">Remedaily</string>
    <string name="hello_blank_fragment">Hello blank fragment!</string>
    <string name="drawer_open">Drawer open</string>
    <string name="drawer_close">Drawer close</string>
    <string name="fname">First Name:</string>
    <string name="lname">Last Name:</string>
    <string name="age">Enter Age:</string>
    <string name="email">Enter Email:</string>
    <string name="save">Save</string>
    <string name="update">Update</string>
    <string name="cancel">Cancel</string>
    <string name="GoToUserDetailsBtn">User Details</string>
    <string name="GoToEditUserDetailsBtn">Edit User Details</string>
    <string name="GoToCalenderBtn">Calender</string>
    <string name="MainActivityLabel">Main Activity</string>
    <string name="UserDetailsActivityLabel">User Details</string>
    <string name="NoUpcomingMedicine">NO UPCOMING MEDICINE</string>
    <string name="NoMissedMedicine">NO MISSED MEDICINE</string>
    <string name="goToCalenderBtn">Calender</string>
    <string name="app_name_settings">Settings</string>
    <string name="help1_label">User registration</string>
    <string name="help1_desc">You can register yourself through the \"Add User\" function.You can enter details such as your name and age.To save these details you need to click on save button.To cancel the operation, you must click on cancel button.</string>
    <string name="help2_label">Edit user details</string>
    <string name="help2_desc">You can edit the entered details through the \"Edit details\" function.You can enter new details such as your name and age.To save these new details, you need to click on update button.To cancel the operation, you must click on cancel button.</string>
    <string name="help3_label">Settings</string>
    <string name="help3_desc">You can control various types of settings such as notification, change user details, reset settings etc.Through settings, you will be able to change your details, change the notification-related settings and there will also be a reset setting option that will allow you to completely reset the application data. The activity will also contain an option to delete your personal and prescriptional details.</string>
    <string name="help4_label">Add new medicine</string>
    <string name="help4_desc">You can add your new medications through \"Add medicine\" functionality. On the navigation menu,click on the \“Add New Medication\” , you will be presented with the screen where all your new medication details are inserted.First, you will be able to type the medication name and the dosage. Then you will be able to select the mode of scheduling. Two modes of scheduling are available for you: daily and weekly. In the daily mode, you can choose administration times which are applied to all the days of the week (the same to every weekday). In the weekly mode your scheduled administration times are applied separately for each day of the week. You can also select the start and the stop days of the drug administration period.Clicking on the drug image window will open the camera, enabling you to take and save the image of the medication box/label.</string>
    <string name="help5_label">Calender</string>
    <string name="help5_desc">The calendar  will show you all your saved medications on the screen. Along with the medication, the following details will also be shown: the dosage, the time and the day.</string>
    <string name="help6_label">My Medication</string>
    <string name="help6_desc">This functionality is accessible via the navigation menu. Its main purpose is to display your current inputted medications on a list. You will be able to scroll through all of your medications and even add a new medication from this.Each medication list item, when tapped, will show you the medication details.</string>
    <string name="help7_label">Contact us</string>
    <string name="help7_desc">Developers: \n\nDevanshu Srivastava\nAditya Gadhvi\nGurjot Singh\nEugene Shishlannikov\nDeep Prakash Singh\nAlex Dunn\n\nEmail: remedaily123@gmail.com</string>
    <string name="txtdailyMedicineActivity">Daily Medicine</string>
    <string name="remedaily">Remedaily</string>
    <string name="copyright">© 2018 Remedaily Inc.</string>
    <string name="rights">All rights reserved.</string>
    <string name="groupnumber">Group-2</string>
    <string name="mcproject">Mobile Computing Project</string>
    <string name="university">Dalhousie University</string>
    <string name="version">Version 1</string>
</resources>
