<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".View.Help"
    android:background="@color/white"
    android:orientation="vertical">

    <TextView
        android:id="@+id/help1Textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginTop="15dp"
        android:text="@string/help1_label"
        android:textColor="@color/black"
        android:textSize="25dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/help1DescTextview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="3dp"
        android:layout_marginTop="5dp"
        android:text="@string/help1_desc"
        android:textColor="@color/black"
        android:textSize="17dp" />

    <TextView
        android:id="@+id/help2Textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginTop="15dp"
        android:text="@string/help2_label"
        android:textColor="@color/black"
        android:textSize="25dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/help2DescTextview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="3dp"
        android:layout_marginTop="5dp"
        android:text="@string/help2_desc"
        android:textColor="@color/black"
        android:textSize="17dp" />

    <TextView
        android:id="@+id/help3Textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginTop="15dp"
        android:text="@string/help3_label"
        android:textColor="@color/black"
        android:textSize="25dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/help3DescTextview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="3dp"
        android:layout_marginTop="5dp"
        android:text="@string/help3_desc"
        android:textColor="@color/black"
        android:textSize="17dp" />

    <TextView
        android:id="@+id/help4Textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginTop="15dp"
        android:text="@string/help4_label"
        android:textColor="@color/black"
        android:textSize="25dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/help4DescTextview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="3dp"
        android:layout_marginTop="5dp"
        android:text="@string/help4_desc"
        android:textColor="@color/black"
        android:textSize="17dp" />

    <TextView
        android:id="@+id/help5Textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginTop="15dp"
        android:text="@string/help5_label"
        android:textColor="@color/black"
        android:textSize="25dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/help5DescTextview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="3dp"
        android:layout_marginTop="5dp"
        android:text="@string/help5_desc"
        android:textColor="@color/black"
        android:textSize="17dp" />

    <TextView
        android:id="@+id/help6Textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginTop="15dp"
        android:text="@string/help6_label"
        android:textColor="@color/black"
        android:textSize="25dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/help6DescTextview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="3dp"
        android:layout_marginTop="5dp"
        android:text="@string/help6_desc"
        android:textColor="@color/black"
        android:textSize="17dp" />

    <TextView
        android:id="@+id/help7Textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginTop="15dp"
        android:text="@string/help7_label"
        android:textColor="@color/black"
        android:textSize="25dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/help7DescTextview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="3dp"
        android:layout_marginTop="5dp"
        android:text="@string/help7_desc"
        android:textColor="@color/black"
        android:textSize="17dp" />


</LinearLayout>
</ScrollView>